# sdl-bgfx-imgui-starter

./: .gitignore  CMakeLists.txt  build_for_wasm.sh
apps/hmi/src/: main.cpp
cmake/: superbuild.cmake
script/: compile-shaders-emscripten.sh  readme.md
website/hmi/: hmi.data  hmi.html  hmi.js  hmi.wasm
